<resources>
    <string name="app_name" translatable="false">MoneyWalletX</string>
    <string name="menu_transaction">"Transactions"</string>
    <string name="menu_category">"Categories"</string>
    <string name="menu_overview">"Overview"</string>
    <string name="menu_debt">"Debts"</string>
    <string name="menu_budget">"Budgets"</string>
    <string name="menu_saving">"Savings"</string>
    <string name="menu_event">"Events"</string>
    <string name="menu_recurrences">"Recurrences"</string>
    <string name="menu_models">"Models"</string>
    <string name="menu_place">"Places"</string>
    <string name="menu_people">"People"</string>
    <string name="menu_converter">"Converter"</string>
    <string name="menu_calculator">"Calculator"</string>
    <string name="menu_search_atm">"Search atm"</string>
    <string name="menu_search_bank">"Search bank"</string>
    <string name="menu_setting">"Settings"</string>
    <string name="menu_support_developer">"Support developer"</string>
    <string name="menu_about">"About"</string>
    <string name="menu_transaction_tab_transactions">"Transactions"</string>
    <string name="menu_transaction_tab_transfers">"Transfers"</string>
    <string name="menu_category_tab_income">"Incomes"</string>
    <string name="menu_category_tab_expense">"Expenses"</string>
    <string name="menu_category_tab_system">"System"</string>
    <string name="menu_debt_tab_debt">"Debt"</string>
    <string name="menu_debt_tab_credit">"Credit"</string>
    <string name="menu_budget_tab_running">"Running"</string>
    <string name="menu_budget_tab_expired">"Expired"</string>
    <string name="menu_saving_tab_running">"Running"</string>
    <string name="menu_saving_tab_completed">"Completed"</string>
    <string name="menu_event_tab_running">"Running"</string>
    <string name="menu_event_tab_completed">"Completed"</string>
    <string name="menu_model_tab_transactions">"Transactions"</string>
    <string name="menu_model_tab_transfers">"Transfers"</string>
    <string name="action_new_wallet">"New wallet"</string>
    <string name="action_manage_wallets">"Manage wallets"</string>
    <string name="action_pay_debt">"Pay"</string>
    <string name="action_receive_debt">"Receive"</string>
    <string name="action_withdraw">"Withdraw"</string>
    <string name="action_deposit">"Deposit"</string>
    <string name="action_withdraw_everything">"Withdraw everything"</string>
    <string name="action_add">"Add"</string>
    <string name="action_new">"New"</string>
    <string name="action_edit">"Edit"</string>
    <string name="action_search">"Search"</string>
    <string name="action_filter">"Filter"</string>
    <string name="action_remove">"Remove"</string>
    <string name="action_open">"Open"</string>
    <string name="action_undo">"Undo"</string>
    <string name="action_skip">"Skip"</string>
    <string name="msg_no_wallet_found">"No wallet found"</string>
    <string name="msg_add_one_wallet">"Please add one wallet"</string>
    <string name="hint_total_sum">"Total"</string>
    <string name="hint_name">"Name"</string>
    <string name="hint_description">"Description"</string>
    <string name="hint_currency">"Currency"</string>
    <string name="hint_money">"Money"</string>
    <string name="hint_start_money">"Initial amount"</string>
    <string name="hint_not_exclude_wallet">"Show this wallet in the total count"</string>
    <string name="hint_category">"Category"</string>
    <string name="hint_parent_category">"Parent category"</string>
    <string name="hint_show_category_report">"Show this category inside the reports"</string>
    <string name="hint_show_category_report_on">"This category is included inside the reports"</string>
    <string name="hint_show_category_report_off">"This category is not included inside the reports"</string>
    <string name="hint_confirmed">"Confirmed"</string>
    <string name="hint_show_in_total">"Show in total wallet"</string>
    <string name="hint_income">"Income"</string>
    <string name="hint_expense">"Expense"</string>
    <string name="hint_date">"Date"</string>
    <string name="hint_start_date">"Start date"</string>
    <string name="hint_end_date">"End date"</string>
    <string name="hint_expiration_date">"Expiration date"</string>
    <string name="hint_time">"Time"</string>
    <string name="hint_wallet">"Wallet"</string>
    <string name="hint_wallets">"Wallets"</string>
    <string name="hint_wallet_from">"From"</string>
    <string name="hint_wallet_to">"To"</string>
    <string name="hint_recurrence">"Recurrence"</string>
    <string name="hint_recurrence_invalid">"Invalid recurrence"</string>
    <string name="hint_event">"Event"</string>
    <string name="hint_people">"People"</string>
    <string name="hint_place">"Place"</string>
    <string name="hint_note">"Note"</string>
    <string name="hint_tax">"Tax"</string>
    <string name="hint_type">"Type"</string>
    <string name="hint_incomes">"Incomes"</string>
    <string name="hint_expenses">"Expenses"</string>
    <string name="hint_net_incomes">"Net incomes"</string>
    <string name="hint_summary">"Summary"</string>
    <string name="hint_address">"Address"</string>
    <string name="hint_size_unknown">"Unknown size"</string>
    <string name="hint_address_unknown">"Unknown address"</string>
    <string name="hint_unknown">"Unknown"</string>
    <string name="hint_directory">"Directory"</string>
    <string name="hint_navigate_up">"Navigate up"</string>
    <string name="hint_password">"Password"</string>
    <string name="hint_atm_name">"ATM name"</string>
    <string name="hint_bank_name">"Bank name"</string>
    <string name="hint_attachments">"Attachments"</string>
    <string name="hint_operation_in_progress">"In progress…"</string>
    <string name="hint_search_something">"Search something"</string>
    <string name="hint_exchange_rate">"Exchange rate"</string>
    <string name="hint_recurrence_finished">"Ended"</string>
    <string name="hint_new_folder">"New folder"</string>
    <string name="hint_import_format">"Import format"</string>
    <string name="hint_export_format">"Export format"</string>
    <string name="hint_import_file">"File to import"</string>
    <string name="hint_export_folder">"Export folder"</string>
    <string name="hint_export_optional_columns">"Optional columns"</string>
    <string name="hint_export_unique_wallet">"Join transactions from different wallets"</string>
    <string name="hint_data_format_csv" translatable="false">"CSV"</string>
    <string name="hint_data_format_xls" translatable="false">"XLS"</string>
    <string name="hint_data_format_pdf" translatable="false">"PDF"</string>
    <string name="hint_iso_code">"ISO code"</string>
    <string name="hint_symbol">"Symbol"</string>
    <string name="hint_decimals">"Number of decimals"</string>
    <string name="hint_show_currency_symbol">"Show currency symbol"</string>
    <string name="hint_group_digits">"Group digits"</string>
    <string name="hint_round_decimals">"Round decimals"</string>
    <string name="hint_show_always_plus_minus">"Always show +/- symbols"</string>
    <string name="hint_auto_backup_enabled">"Service enabled"</string>
    <string name="hint_auto_backup_wifi_only">"Only on WiFi network"</string>
    <string name="hint_auto_backup_only_if_data_changed">"Only if data is changed"</string>
    <string name="hint_auto_backup_every_n_hours">"Every %d hours"</string>
    <string name="hint_auto_backup_folder">"Folder"</string>
    <string name="hint_auto_backup_root_folder">"Root"</string>
    <string name="total_wallet_name">"Total"</string>
    <string name="title_activity_new_currency">"New currency"</string>
    <string name="title_activity_edit_currency">"Edit currency"</string>
    <string name="title_activity_new_wallet">"New wallet"</string>
    <string name="title_activity_edit_wallet">"Edit wallet"</string>
    <string name="title_activity_new_transaction">"New transaction"</string>
    <string name="title_activity_edit_transaction">"Edit transaction"</string>
    <string name="title_activity_new_transfer">"New transfer"</string>
    <string name="title_activity_edit_transfer">"Edit transfer"</string>
    <string name="title_activity_new_category">"New category"</string>
    <string name="title_activity_edit_category">"Edit category"</string>
    <string name="title_activity_new_debt">"New debt"</string>
    <string name="title_activity_edit_debt">"Edit debt"</string>
    <string name="title_activity_new_budget">"New budget"</string>
    <string name="title_activity_edit_budget">"Edit budget"</string>
    <string name="title_activity_new_saving">"New saving"</string>
    <string name="title_activity_edit_saving">"Edit saving"</string>
    <string name="title_activity_new_event">"New event"</string>
    <string name="title_activity_edit_event">"Edit event"</string>
    <string name="title_activity_new_recurrence">"New recurrence"</string>
    <string name="title_activity_edit_recurrence">"Edit recurrence"</string>
    <string name="title_activity_new_model">"New model"</string>
    <string name="title_activity_edit_model">"Edit model"</string>
    <string name="title_activity_new_place">"New place"</string>
    <string name="title_activity_edit_place">"Edit place"</string>
    <string name="title_activity_new_person">"New person"</string>
    <string name="title_activity_edit_person">"Edit person"</string>
    <string name="title_activity_wallet_sort">"Sort wallets"</string>
    <string name="setting_category_ui_appearance">"Appearance"</string>
    <string name="setting_category_ui_theme">"Theme"</string>
    <string name="setting_title_ui_income_color">"Income color"</string>
    <string name="setting_title_ui_expense_color">"Expense color"</string>
    <string name="setting_title_ui_custom_digits">"Display style of digits"</string>
    <string name="setting_summary_ui_custom_digits">"Personalize the display style of digits"</string>
    <string name="setting_title_ui_date_format">"Date format"</string>
    <string name="setting_title_ui_first_day_week">"First day of week"</string>
    <string name="setting_title_ui_first_day_month">"First day of month"</string>
    <string name="setting_title_ui_group_type">"Grouping"</string>
    <string name="setting_title_ui_theme_color_primary">"Color primary"</string>
    <string name="setting_title_ui_theme_color_accent">"Color accent"</string>
    <string name="setting_title_ui_theme_type">"Type"</string>
    <string name="setting_category_utility_notification">"Notification"</string>
    <string name="setting_category_utility_security">"Security"</string>
    <string name="setting_category_utility_exchange_rates">"Exchange rates"</string>
    <string name="setting_title_daily_reminder">"Daily reminder"</string>
    <string name="setting_title_security">"Access protection"</string>
    <string name="setting_title_exchange_rate_source">"Service"</string>
    <string name="setting_title_exchange_rate_api_key">"Custom api-key"</string>
    <string name="setting_title_exchange_rate_update">"Update exchange rates"</string>
    <string name="setting_title_currency_management">"Manage currencies"</string>
    <string name="setting_summary_currency_management">"Add custom currencies"</string>
    <string name="setting_category_database_backup">"Backup"</string>
    <string name="setting_title_database_backup_services">"Backup services"</string>
    <string name="setting_summary_database_backup_services">"Create and restore the database"</string>
    <string name="setting_category_database_import_export">"Import/Export"</string>
    <string name="setting_title_import_data">"Import data"</string>
    <string name="setting_summary_import_data">"Read data from an external file"</string>
    <string name="setting_title_export_data">"Export data"</string>
    <string name="setting_summary_export_data">"Write data on an external file"</string>
</resources>