<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018.
  ~
  ~ This file is part of MoneyWallet.
  ~
  ~ MoneyWallet is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MoneyWallet is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with MoneyWallet.  If not, see <http://www.gnu.org/licenses/>.
  -->

<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="android.widget.LinearLayout"
    tools:orientation="vertical" >

    <com.oriondev.moneywallet.ui.view.theme.ThemedMaterialEditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_activity_body_edit_text_margin_top"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        app:met_mode="floatingLabel"
        app:met_leftIcon="@drawable/ic_format_align_left_black_24dp" />

    <com.oriondev.moneywallet.ui.view.theme.ThemedMaterialEditText
        android:id="@+id/category_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_category"
        android:inputType="textMultiLine"
        app:met_mode="floatingLabel"
        app:met_leftIcon="@drawable/ic_table_large_24dp" />

    <com.oriondev.moneywallet.ui.view.theme.ThemedMaterialEditText
        android:id="@+id/wallet_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_wallet"
        android:inputType="textMultiLine"
        app:met_mode="floatingLabel"
        app:met_leftIcon="@drawable/ic_folder_black_24dp" />

    <com.oriondev.moneywallet.ui.view.theme.ThemedMaterialEditText
        android:id="@+id/recurrence_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_recurrence"
        android:inputType="textMultiLine"
        app:met_mode="floatingLabel"
        app:met_leftIcon="@drawable/ic_restore_24dp" />

    <com.oriondev.moneywallet.ui.view.theme.ThemedMaterialEditText
        android:id="@+id/event_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event"
        android:inputType="textMultiLine"
        app:met_mode="floatingLabel"
        app:met_leftIcon="@drawable/ic_assistant_photo_24dp"
        app:met_showCancelButton="true" />

    <com.oriondev.moneywallet.ui.view.theme.ThemedMaterialEditText
        android:id="@+id/place_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_place"
        android:inputType="textMultiLine"
        app:met_mode="floatingLabel"
        app:met_leftIcon="@drawable/ic_place_24dp"
        app:met_showCancelButton="true" />

    <com.oriondev.moneywallet.ui.view.theme.ThemedMaterialEditText
        android:id="@+id/note_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_note"
        android:inputType="textMultiLine"
        app:met_mode="floatingLabel"
        app:met_leftIcon="@drawable/ic_content_paste_black_24dp" />

    <com.oriondev.moneywallet.ui.view.theme.ThemedCheckBox
        android:id="@+id/confirmed_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_activity_body_check_box_top_bottom_margin"
        android:layout_marginLeft="@dimen/material_activity_body_check_box_start_end_margin"
        android:layout_marginRight="@dimen/material_activity_body_check_box_start_end_margin"
        android:paddingLeft="@dimen/material_activity_body_check_box_start_padding"
        android:paddingStart="@dimen/material_activity_body_check_box_start_padding"
        android:text="@string/hint_confirmed"
        android:checked="true"
        tools:ignore="RtlSymmetry" />

    <com.oriondev.moneywallet.ui.view.theme.ThemedCheckBox
        android:id="@+id/count_in_total_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/material_activity_body_check_box_top_bottom_margin"
        android:layout_marginLeft="@dimen/material_activity_body_check_box_start_end_margin"
        android:layout_marginRight="@dimen/material_activity_body_check_box_start_end_margin"
        android:paddingLeft="@dimen/material_activity_body_check_box_start_padding"
        android:paddingStart="@dimen/material_activity_body_check_box_start_padding"
        android:text="@string/hint_show_in_total"
        android:checked="true"
        tools:ignore="RtlSymmetry" />

</merge>