<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018.
  ~
  ~ This file is part of MoneyWallet.
  ~
  ~ MoneyWallet is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MoneyWallet is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with MoneyWallet.  If not, see <http://www.gnu.org/licenses/>.
  -->

<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="android.widget.LinearLayout"
    tools:orientation="vertical" >

    <com.oriondev.moneywallet.ui.view.theme.ThemedMaterialEditText
        android:id="@+id/type_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_activity_body_edit_text_margin_top"
        android:hint="@string/hint_type"
        android:inputType="textNoSuggestions"
        app:met_mode="floatingLabel"
        app:met_leftIcon="@drawable/ic_label_outline_black_24dp" />

    <com.oriondev.moneywallet.ui.view.theme.ThemedMaterialEditText
        android:id="@+id/category_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_category"
        android:inputType="textNoSuggestions"
        app:met_mode="floatingLabel"
        app:met_leftIcon="@drawable/ic_table_large_24dp" />

    <com.oriondev.moneywallet.ui.view.theme.ThemedMaterialEditText
        android:id="@+id/start_date_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_start_date"
        android:inputType="textNoSuggestions"
        app:met_mode="floatingLabel"
        app:met_leftIcon="@drawable/ic_today_black_24dp" />

    <com.oriondev.moneywallet.ui.view.theme.ThemedMaterialEditText
        android:id="@+id/end_date_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_end_date"
        android:inputType="textNoSuggestions"
        app:met_mode="floatingLabel"
        app:met_leftIcon="@drawable/ic_calendar_black_24dp" />

    <com.oriondev.moneywallet.ui.view.theme.ThemedMaterialEditText
        android:id="@+id/wallets_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/material_activity_body_edit_text_margin_bottom"
        android:hint="@string/hint_wallets"
        android:inputType="textMultiLine"
        app:met_mode="floatingLabel"
        app:met_leftIcon="@drawable/ic_folder_black_24dp" />

</merge>